Update resume and portfolio: correct employment dates, enhance technology stack sections, and update contact information.

--- a/index.html
+++ b/index.html
@@ -120,51 +120,53 @@
 				<div class="tech">
 					<h2>Languages</h2>
 					<i class="devicon-python-plain colored"></i>
-					<i class="devicon-java-plain-wordmark colored"></i>
-					<i class="devicon-cplusplus-plain colored"></i>
-					<i class="devicon-javascript-plain colored"></i>
+					<i class="devicon-bash-plain colored"></i>
+					<i class="devicon-go-plain colored"></i>
+					<i class="devicon-yaml-plain colored"></i>
 					<p>
-						My favorite languages for systems programming, software
-						engineering, and data analysis.
+						Core languages for automation, scripting, and
+						infrastructure as code development.
 					</p>
 				</div>
 
-				<!-- Technology Stack #2: Front-End -->
+				<!-- Technology Stack #2: Cloud Platforms -->
 				<div class="tech">
-					<h2>Front-End</h2>
-					<i class="devicon-react-original colored"></i>
-					<i class="devicon-bootstrap-plain-wordmark colored"></i>
-					<i class="devicon-html5-plain-wordmark colored"></i>
-					<i class="devicon-css3-plain-wordmark colored"></i>
+					<h2>Cloud Platforms</h2>
+					<i
+						class="devicon-amazonwebservices-plain-wordmark colored"
+					></i>
+					<i class="devicon-azure-plain-wordmark colored"></i>
+					<i class="devicon-kubernetes-plain-wordmark colored"></i>
+					<i class="devicon-terraform-plain-wordmark colored"></i>
 					<p>
-						My preferred technologies for front-end web development
-						and component design.
+						Cloud platforms and infrastructure orchestration tools
+						for scalable, reliable deployments.
 					</p>
 				</div>
 
-				<!-- Technology Stack #3: Back-End -->
+				<!-- Technology Stack #3: CI/CD & Automation -->
 				<div class="tech">
-					<h2>Back-End</h2>
-					<i class="devicon-nodejs-plain colored"></i>
-					<i class="devicon-express-original-wordmark colored"></i>
-					<i class="devicon-mongodb-plain-wordmark colored"></i>
-					<i class="devicon-postgresql-plain-wordmark colored"></i>
-					<p>
-						My preferred technologies for back-end web programming
-						and database architecture.
-					</p>
-				</div>
-
-				<!-- Technology Stack #4: Tools -->
-				<div class="tech">
-					<h2>Tools</h2>
-					<i class="devicon-git-plain-wordmark colored"></i>
-					<i class="devicon-visualstudio-plain colored"></i>
+					<h2>CI/CD & Automation</h2>
+					<i class="devicon-jenkins-line colored"></i>
+					<i class="devicon-ansible-plain colored"></i>
+					<i class="devicon-gitlab-plain-wordmark colored"></i>
 					<i class="devicon-github-plain-wordmark colored"></i>
-					<i class="devicon-docker-plain-wordmark colored"></i>
 					<p>
-						My favorite tools for version control, code editing, and
-						container orchestration.
+						Automation and continuous integration tools for
+						streamlined software delivery pipelines.
+					</p>
+				</div>
+
+				<!-- Technology Stack #4: Monitoring & Containerization -->
+				<div class="tech">
+					<h2>Monitoring & Containers</h2>
+					<i class="devicon-docker-plain-wordmark colored"></i>
+					<i class="devicon-prometheus-original colored"></i>
+					<i class="devicon-grafana-original colored"></i>
+					<i class="devicon-elasticsearch-plain colored"></i>
+					<p>
+						Containerization and monitoring solutions for system
+						observability and performance optimization.
 					</p>
 				</div>
 			</div>
@@ -199,7 +201,7 @@
 					Administration includes the provisioning and maintenance of
 					Linux servers in production and development environments.
 				</p>
-				<p><strong>March 2022 – Present</strong></p>
+				<p><strong>September 2022 – Present</strong></p>
 			</div>
 		</section>
 
